[GStreamer] ASSERTION FAILED: end.isValid() in PlatformTimeRanges::add https://bugs.webkit.org/show_bug.cgi?id=186880

Reviewed by Xabier Rodriguez-Calvar.

Source/WebCore:

Bug 180253 has added assertions the arugments `start` and `end` is
valid MediaTime in PlatformTimeRanges::add. Since then, some
LayoutTests fail due to the assertion failure.

The invalid MediaTime is added into the PlatformTimeRanges in
MediaPlayerPrivateGStreamer::buffered. Before adding MediaTime,
original implementation checks MediaTime::operator bool() returns
true. But, this method returns true if the time value is invalid.
Then, PlatformTimeRanges::add is called with an invalid MediaTime.

No new tests (No behavior change).

* platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.cpp:
(WebCore::MediaPlayerPrivateGStreamer::buffered const): Check
maxTimeLoaded() is valid before adding to `timeRanges`.

LayoutTests:

* platform/gtk/TestExpectations: Removed Crash marks of
compositing/geometry/clipped-video-controller.html,
fast/canvas/webgl/oes-texture-half-float-with-video.html,
fast/canvas/webgl/tex-image-and-sub-image-2d-with-video-rgb565.html,
fast/canvas/webgl/tex-image-and-sub-image-2d-with-video-rgba5551.html,
fast/canvas/webgl/tex-image-and-sub-image-2d-with-video.html,
fast/events/media-focus-in-standalone-media-document.html,
fullscreen/video-controls-timeline.html,
http/tests/appcache/video.html, and compositing/video/poster.html.

Canonical link: https://commits.webkit.org/202133@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@233033 268f45cc-cd09-0410-ab3c-d52691b4dbfc